--- a/LangGuide/PABCSystemUnit/Files/Extension methods for sequence of T.html
+++ b/LangGuide/PABCSystemUnit/Files/Extension methods for sequence of T.html
@@ -85,7 +85,7 @@
 <tr><td><code><b>function</b> Numerate&lt;T&gt;(Self: <b>sequence <b>of</b></b> T): <b>sequence <b>of</b></b> (integer,T); <b>extensionmethod</b>;</code>
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Numbers the elements of the sequence starting with 1</td></tr>
 <tr><td><code><b>function</b> Numerate&lt;T&gt;(Self: <b>sequence <b>of</b></b> T; from: integer): <b>sequence <b>of</b></b> (integer,T); <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Numbers the elements of the sequence starting with the spicified number <b>from</b></td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Numbers the elements of the sequence starting with the specified number <b>from</b></td></tr>
 <tr><td><code><b>function</b> Pairwise&lt;T&gt;(Self: <b>sequence <b>of</b></b> T): <b>sequence <b>of</b></b> (T,T); <b>extensionmethod</b>;</code>
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Transforms the sequence into a sequence of pairs of neighboring elements</td></tr>
 <tr><td><code><b>function</b> Pairwise&lt;T,Res&gt;(Self: <b>sequence <b>of</b></b> T; func:(T,T)-&gt;Res): <b>sequence <b>of</b></b> Res; <b>extensionmethod</b>;</code>
@@ -93,7 +93,7 @@
 <tr><td><code><b>function</b> Partition&lt;T&gt;(Self: <b>sequence <b>of</b></b> T; cond: T-&gt;boolean): (<b>sequence <b>of</b></b> T,<b>sequence <b>of</b></b> T); <b>extensionmethod</b>;</code>
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Splits the sequence into two sequences based on the condition <b>cond</b></td></tr>
 <tr><td><code><b>function</b> Partition&lt;T&gt;(Self: <b>sequence <b>of</b></b> T; cond: (T,integer)-&gt;boolean): (<b>sequence <b>of</b></b> T,<b>sequence <b>of</b></b> T); <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Splits the sequence into two sequences based on the condition <b>cond</b>, which is index dependant</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Splits the sequence into two sequences based on the condition <b>cond</b>, which is index dependent</td></tr>
 <tr><td><code><b>function</b> Print&lt;T&gt;(Self: <b>sequence <b>of</b></b> T; delim: string): <b>sequence <b>of</b></b> T; <b>extensionmethod</b>;</code>
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Displays the sequence on the screen using <b>delim</b> as a delimiter</td></tr>
 <tr><td><code><b>function</b> Print&lt;T&gt;(Self: <b>sequence <b>of</b></b> T): <b>sequence <b>of</b></b> T; <b>extensionmethod</b>;</code>
@@ -107,7 +107,7 @@
 <tr><td><code><b>function</b> Slice&lt;T&gt;(Self: <b>sequence <b>of</b></b> T; from,step: integer): <b>sequence <b>of</b></b> T; <b>extensionmethod</b>;</code>
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns a slice with the specified beginning and step &gt; 0</td></tr>
 <tr><td><code><b>function</b> Slice&lt;T&gt;(Self: <b>sequence <b>of</b></b> T; from,step,count: integer): <b>sequence <b>of</b></b> T; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns a slice with the specified beginning, step &gt; 0, and lenght limitation (not more than <b>count</b> elements)</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns a slice with the specified beginning, step &gt; 0, and length limitation (not more than <b>count</b> elements)</td></tr>
 <tr><td><code><b>function</b> Sorted&lt;T&gt;(Self: <b>sequence <b>of</b></b> T): <b>sequence <b>of</b></b> T; <b>extensionmethod</b>;</code>
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns a sequence sorted in ascending order</td></tr>
 <tr><td><code><b>function</b> SortedDescending&lt;T&gt;(Self: <b>sequence <b>of</b></b> T): <b>sequence <b>of</b></b> T; <b>extensionmethod</b>;</code>
