--- a/LangGuide/PABCSystemUnit/Files/Infinite sequences.html
+++ b/LangGuide/PABCSystemUnit/Files/Infinite sequences.html
@@ -1,14 +1,14 @@
-<HTML><HEAD><object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+п»ї<HTML><HEAD><object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
 <param name="Keyword" value="Cycle">
 <param name="Keyword" value="Step"></object>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1251"><link rel="StyleSheet" href="../../../default.css">
-</HEAD><body><H1>Генерация бесконечных последовательностей</H1>
+</HEAD><body><H1>Р“РµРЅРµСЂР°С†РёСЏ Р±РµСЃРєРѕРЅРµС‡РЅС‹С… РїРѕСЃР»РµРґРѕРІР°С‚РµР»СЊРЅРѕСЃС‚РµР№</H1>
 <table cellpadding=3><tr><td><code><b>function</b> Cycle&lt;T&gt;(Self: <b>sequence <b>of</b></b> T): <b>sequence <b>of</b></b> T; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Повторяет последовательность бесконечное число раз</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;РџРѕРІС‚РѕСЂСЏРµС‚ РїРѕСЃР»РµРґРѕРІР°С‚РµР»СЊРЅРѕСЃС‚СЊ Р±РµСЃРєРѕРЅРµС‡РЅРѕРµ С‡РёСЃР»Рѕ СЂР°Р·</td></tr>
 <tr><td><code><b>function</b> Step(Self: integer): <b>sequence <b>of</b></b> integer; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает бесконечную последовательность целых от текущего значения с шагом 1</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ Р±РµСЃРєРѕРЅРµС‡РЅСѓСЋ РїРѕСЃР»РµРґРѕРІР°С‚РµР»СЊРЅРѕСЃС‚СЊ С†РµР»С‹С… РѕС‚ С‚РµРєСѓС‰РµРіРѕ Р·РЅР°С‡РµРЅРёСЏ СЃ С€Р°РіРѕРј 1</td></tr>
 <tr><td><code><b>function</b> Step(Self: integer; step: integer): <b>sequence <b>of</b></b> integer; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает бесконечную последовательность целых от текущего значения с шагом step</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ Р±РµСЃРєРѕРЅРµС‡РЅСѓСЋ РїРѕСЃР»РµРґРѕРІР°С‚РµР»СЊРЅРѕСЃС‚СЊ С†РµР»С‹С… РѕС‚ С‚РµРєСѓС‰РµРіРѕ Р·РЅР°С‡РµРЅРёСЏ СЃ С€Р°РіРѕРј step</td></tr>
 <tr><td><code><b>function</b> Step(Self: real; step: real): <b>sequence <b>of</b></b> real; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает бесконечную последовательность вещественных от текущего значения с шагом step</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ Р±РµСЃРєРѕРЅРµС‡РЅСѓСЋ РїРѕСЃР»РµРґРѕРІР°С‚РµР»СЊРЅРѕСЃС‚СЊ РІРµС‰РµСЃС‚РІРµРЅРЅС‹С… РѕС‚ С‚РµРєСѓС‰РµРіРѕ Р·РЅР°С‡РµРЅРёСЏ СЃ С€Р°РіРѕРј step</td></tr>
 </table></body></HTML>
