translated Infinite sequences.html

--- a/LangGuide/PABCSystemUnit/Files/Infinite sequences.html
+++ b/LangGuide/PABCSystemUnit/Files/Infinite sequences.html
@@ -2,13 +2,13 @@
 <param name="Keyword" value="Cycle">
 <param name="Keyword" value="Step"></object>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1251"><link rel="StyleSheet" href="../../../default.css">
-</HEAD><body><H1>Генерация бесконечных последовательностей</H1>
+</HEAD><body><H1>Infinite sequences</H1>
 <table cellpadding=3><tr><td><code><b>function</b> Cycle&lt;T&gt;(Self: <b>sequence <b>of</b></b> T): <b>sequence <b>of</b></b> T; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Повторяет последовательность бесконечное число раз</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Repeats the sequence infinitely</td></tr>
 <tr><td><code><b>function</b> Step(Self: integer): <b>sequence <b>of</b></b> integer; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает бесконечную последовательность целых от текущего значения с шагом 1</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns an infinite sequence of integers that starts with the current value and has a common difference (step) of successive elements equal to 1</td></tr>
 <tr><td><code><b>function</b> Step(Self: integer; step: integer): <b>sequence <b>of</b></b> integer; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает бесконечную последовательность целых от текущего значения с шагом step</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns an infinite sequence of integers that starts with the current value and has a common difference (step) of successive elements equal to <b>step</b></td></tr>
 <tr><td><code><b>function</b> Step(Self: real; step: real): <b>sequence <b>of</b></b> real; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает бесконечную последовательность вещественных от текущего значения с шагом step</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns an infinite sequence of real numbers that starts with the current value and has a common difference (step) of successive elements equal to <b>step</b></td></tr>
 </table></body></HTML>
